# image_converter

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  loadConfig.xml
configs/: image_converter.lconf
include/: image_converter.h
src/: image_converter.cpp  interface.cpp
